maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:15: error: not found: value avnace
        avnace();gauche();avance();
        ^