maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!estSurBiscuit()){
    if(estFaceMur()){
      gauche();
      if(estFaceMur()){
        droite();droite();
      } else {
        avance();
      }
    } else {
      gauche();
      if(estFaceMur()){
        droite();avance();
      } else {
        avnace();gauche();avance();
      }
    }
  }
  prendBiscuit();
}